<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tool">

    <fragment
        android:id="@+id/navigation_tool"
        android:name="individual.coldmint.DevAssistant.fragment.ToolsFragment"
        android:label="@string/title_tool"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/navigation_collect"
        android:name="individual.coldmint.DevAssistant.fragment.NullFragment"
        android:label="@string/title_collect"
        tools:layout="@layout/fragment_null" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="individual.coldmint.DevAssistant.fragment.NullFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_null" />
</navigation>