<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding_24dp">


    <TextView
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_color" />


    <com.flask.colorpicker.ColorPickerView
        android:id="@+id/color_picker_view"
        android:layout_width="@dimen/dialog_color_picker_size_160dp"
        android:layout_height="@dimen/dialog_color_picker_size_160dp"
        android:layout_marginTop="@dimen/dialog_color_picker_margin_top_20dp"
        app:alphaSlider="true"
        app:alphaSliderView="@+id/v_alpha_slider"
        app:density="12"
        app:lightnessSlider="true"
        app:lightnessSliderView="@+id/v_lightness_slider"
        app:wheelType="FLOWER" />

    <com.flask.colorpicker.slider.LightnessSlider
        android:id="@+id/v_lightness_slider"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_color_picker_slider_height_32dp"
        android:layout_marginTop="@dimen/dialog_color_picker_margin_top_20dp" />

    <com.flask.colorpicker.slider.AlphaSlider
        android:id="@+id/v_alpha_slider"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_color_picker_slider_height_32dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_padding_24dp">

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small_8dp"
            android:layout_toStartOf="@id/confirmButton"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirmButton"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/confirm" />

    </RelativeLayout>

</LinearLayout>